--- a/style.css
+++ b/style.css
@@ -4,14 +4,29 @@
   box-sizing: border-box;
 }
 
-body {
+.quiz-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-image: linear-gradient(
+    to bottom,
+    #1ea0c8,
+    #63a7cd,
+    #8aafd0,
+    #a8b8cf,
+    #bec2ce
+  );
 }
 
 .quiz {
-  width: 40rem;
-  height: 40rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* background-color: #fff; */
+  border: 3px solid blue;
 }
 
 ul {
@@ -25,8 +40,8 @@ ul {
 
 li {
   list-style: none;
-  min-width: 40%;
-  min-height: 7rem;
+  min-width: 4rem;
+  min-height: 2rem;
   border-radius: 7rem;
   -webkit-border-radius: 7rem;
   -moz-border-radius: 7rem;
@@ -34,7 +49,7 @@ li {
   -o-border-radius: 7rem;
   border: 0.2rem solid rgb(224, 224, 224);
   padding: 0 7rem 0 3rem;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -43,6 +58,8 @@ li {
 
 label {
   padding-left: 1rem;
+  display: flex;
+  width: 100%;
 }
 
 /* increase the size of radio button  */
